# easy-predict

./: .env  .gitignore  .gitlab-ci.yml  .wranglerignore  README.md  index.html  openapi.json  package.json  pyproject.toml  requirements.txt  smithery.yaml  tsconfig.json  wrangler.jsonc
.github/: ci.yml
.github/workflows/: ci.yml
anomaly_detection/: app.py
examples/: demo_agent.py
mcp_server/: pyproject.toml  server.py
mcp_server/easy_predict_mcp/: server.py
public/: index.html  llm.txt  llms.txt  openapi.json
public/.well-known/mcp/: server-card.json
src/: index.ts  mcp.ts
tests/: conftest.py  test_app.py
timeseries/: __init__.py  app.py
